--- a/apps/Admin/views/AdminMenu.twig
+++ b/apps/Admin/views/AdminMenu.twig
@@ -1,13 +1,13 @@
 <div class="pure-menu pure-menu-open">
-    <img src="logo.gif" style="border: none; width: 200px; height: 58px; margin-bottom: -5px;">
+    <img src="/static/admin/login-head.png" style="border: none; width: 200px; height: 58px; margin-bottom: -5px;">
     <p style="width: 200px; margin: 0px; color: white; text-align: center; margin-top: 3px; margin-bottom: 3px;">Operatore:&nbsp;&nbsp;&nbsp;&nbsp;{{ userDisplayName }}</p>
     <p style="width: 200px; margin: 0px; color: white; text-align: center; margin-top: 3px; margin-bottom: 3px; font-size: 0.3em;">Version v1.0.2</p>
     <ul>
         {% for module in modules %}
             {% if module.name == activeModuleName %}
-                <li class="menu-item-divided pure-menu-selected"><a href="{{ module.name }}">{{ module.description }}</a></li>
+                <li class="menu-item-divided pure-menu-selected"><a href="{{ path(module.routeName) }}">{{ module.description }}</a></li>
             {% else %}
-                <li><a href="{{ module.name }}/">{{ module.name }}</a></li>
+                <li><a href="{{ path(module.routeName) }}">{{ module.description }}</a></li>
             {% endif %}
         {% endfor %}
     </ul>
