--- a/apps/Admin/views/Base.twig
+++ b/apps/Admin/views/Base.twig
@@ -18,6 +18,7 @@
 
     <script src="/static/admin/js/jquery-2.1.1.min.js"></script>
     <script src="/static/admin/jquery-ui/jquery-ui.js"></script>
+    <script src="/static/admin/js/admin.common.js"></script>
 
     {% block head %}
     {% endblock %}
