--- a/apps/Site/views/Page.twig
+++ b/apps/Site/views/Page.twig
@@ -7,23 +7,23 @@
 
     <meta name="description" content="{{ pageDescription|escape }}">
     <link rel="stylesheet" type="text/css" href="/resources/css/stile.css">
-    <link rel="stylesheet" type="text/css" href="/resources/css/tables-min.css">
-    <link rel="stylesheet" type="text/css" href="/resources/lightbox/css/lightbox.css">
+    <link rel="stylesheet" type="text/css" href="/static/pure-css/tables-min.css">
+    <link rel="stylesheet" type="text/css" href="/static/lightbox/css/lightbox.css">
 
-    <link rel="stylesheet" type="text/css" href="/resources/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/slick/slick.css"/>
 
-    <link rel="stylesheet" href="/resources/gallery/css/blueimp-gallery.min.css">
+    <link rel="stylesheet" href="/static/gallery/css/blueimp-gallery.min.css">
 
 
-    <script type="text/javascript" src="/resources/js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="/static/jquery/jquery-1.11.2.min.js"></script>
 
-    <script type="text/javascript" src="/resources/lightbox/js/lightbox.min.js"></script>
+    <script type="text/javascript" src="/static/lightbox/js/lightbox.min.js"></script>
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="/resources/slick/slick.min.js"></script>
+    {#<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>#}
+    <script type="text/javascript" src="/static/slick/slick.min.js"></script>
 
     <!-- blueimp gallery -->
-    <script src="/resources/gallery/js/jquery.blueimp-gallery.min.js"></script>
+    <script src="/static/gallery/js/jquery.blueimp-gallery.min.js"></script>
 
 
     <!-- end -->
