Adds url assistant. (url refactoring)

--- a/apps/Admin/Module/Pages/views/list.twig
+++ b/apps/Admin/Module/Pages/views/list.twig
@@ -10,14 +10,14 @@
 {% endblock %}
 
 {% block content %}
-<table class="pure-table pure-table-striped center" id="content-table" style="margin-top: 3em;">
+<table class="pure-table pure-table-striped list-table" id="content-table">
     <thead>
     <tr style="font-size: 1.1em;">
         <th>ID</th>
         <th>Nome</th>
         <th>Titolo</th>
         <th>Pubblicata</th>
-        <th></th>
+        <th class="actions-col"></th>
     </tr>
     </thead>
 
