--- a/apps/Admin/Module/Users/views/List.twig
+++ b/apps/Admin/Module/Users/views/List.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-    <table class="pure-table pure-table-striped center" id="content-table" style="margin-top: 3em;">
+    <table class="pure-table pure-table-striped list-table" id="content-table">
         <thead>
         <tr style="font-size: 1.1em;">
             <th>ID</th>
@@ -19,7 +19,7 @@
             <th>Abilitato</th>
             <th>Valido (Scadenza)</th>
             <th>Valido (Scadenza Credenziali)</th>
-            <th></th>
+            <th class="actions-col"></th>
         </tr>
         </thead>
 
