--- a/apps/Admin/Module/Languages/views/List.twig
+++ b/apps/Admin/Module/Languages/views/List.twig
@@ -10,14 +10,14 @@
 {% endblock %}
 
 {% block content %}
-    <table class="pure-table pure-table-striped center" id="content-table" style="margin-top: 3em;">
+    <table class="pure-table pure-table-striped list-table" id="content-table">
         <thead>
         <tr style="font-size: 1.1em;">
             <th>ID</th>
             <th>Codice</th>
             <th>Icona</th>
             <th>Descrizione</th>
-            <th></th>
+            <th class="actions-col"></th>
         </tr>
         </thead>
 
