--- a/apps/Admin/Module/Pages/views/Editor.twig
+++ b/apps/Admin/Module/Pages/views/Editor.twig
@@ -1,7 +1,7 @@
 {% extends 'App\\Admin\\Base.twig' %}
 
 {% block head %}
-    <script type="text/javascript" src="/static/admin/tinymce/tinymce.min.js"></script>
+    <script type="text/javascript" src="/static/admin/tinymce/tinymce.min.js" xmlns="http://www.w3.org/1999/html"></script>
 {% endblock %}
 
 {% block title %}
@@ -82,7 +82,6 @@
         </div>
     </div>
 
-    <!-- <div style="width: 500px; height: 320px; padding: 15px; float: right; overflow: scroll;"> -->
     <div class="pure-u-10-24" style="overflow: scroll; padding: 10px; float: right;">
         <legend>Url Pagina</legend>
         <div class="pure-control-group">
@@ -93,8 +92,8 @@
                 </thead>
 
                 {% for url in page.getPageUrls().toArray() %}
-                <tr>
-                    <td mode="0">{{ url.url }}</td>
+                <tr class="urlRow">
+                    <td>{{ url.url }}</td>
                     <td><i class="fa fa-pencil-square fa-2x modurl"></i>&nbsp; &nbsp;<i class="fa fa-minus-square fa-2x delurl"></i></td>
                     <input type="hidden" name="url[]" value="{{ url.url }}">
                 </tr>
@@ -103,9 +102,10 @@
                 <tr id="newurlrow">
                     <td colspan="2"><button type="button" class="pure-button" id="newurl">Nuovo</button></td>
                 </tr>
+
                 <tr style="display: none;" id="urlrowtpl">
-                    <td mode="1"><input type="text"></td>
-                    <td><i class="fa fa-pencil-square fa-2x modurl" style="color: #0078e7;"></i>&nbsp; &nbsp;<i class="fa fa-minus-square fa-2x delurl" style="color: #0078e7;"></i></td>
+                    <td></td>
+                    <td><i class="fa fa-pencil-square fa-2x modurl"></i>&nbsp; &nbsp;<i class="fa fa-minus-square fa-2x delurl"></i></td>
                     <input type="hidden" name="url[]">
                 </tr>
             </table>
@@ -190,132 +190,63 @@
 {% block tail %}
 
 <!-- INIZIO CODICE DEFINIZIONE DIALOG NUOVO BLOCCO -->
-<div id="newblockmodal" style="height: 400px; width: 600px; font-size: 0.9em;">
-    <fieldset class="pure-form" style="text-align: center; margin-bottom: 10px;" id="nbm-tabcontrol">
-        <button type="button" id="nbm-new" class="pure-button pure-button-primary" onclick="nbmtabcontrol(this)">Nuovo Blocco</button>
-        &nbsp;&nbsp;&nbsp;&nbsp;
-        <button type="button" id="nbm-exist" class="pure-button" onclick="nbmtabcontrol(this)">Blocco Esistente</button>
-    </fieldset>
-    <div id="nbm-newblockscreen" class="pure-form pure-form-aligned">
-        <form action="#" id="nbm-newblockform">
-            <fieldset>
-                <div class="pure-control-group">
-                    <label>Nome</label>
-                    <input type="text" id="nbm-name">
-                </div>
-                <div class="pure-control-group">
-                    <label>Descrizione</label>
-                    <textarea id="nbm-description"></textarea>
-                </div>
-                <div class="pure-control-group">
-                    <label>Stile Blocco</label>
-                    <select id="nbm-style">
-                        {% for style in styles %}
-                            <option value="{{ style.classname }}">{{ style.description }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </fieldset>
-        </form>
-        <button type="button" id="nbm-addnew" class="pure-button pure-button-primary" style="float: right;">Aggiungi</button>
-    </div>
-    <div id="nbm-insertblockscreen" style="display: none;">
-        <form action="#" id="nbm-insertblockform">
-            <div style="max-height: 350px; overflow: scroll;">
-                <table class="pure-table pure-table-striped center">
-                    <thead>
-                    <tr>
-                        <th></th>
-                        <th>Nome</th>
-                        <th>Stile</th>
-                    </tr>
-                    </thead>
-                    {% for block in blocks %}
-                    <tr>
-                        <td><input class="nbm-blockcheck" type="checkbox" value="{{ block.id }}"></td>
-                        <td>{{ block.name }}</td>
-                        <td>{{ block.blockStyleClassName }}</td>
-                    </tr>
-                    {% endfor %}
-                </table>
-            </div>
-            <button type="button" id="nbm-addexist" class="pure-button pure-button-primary" style="float: right;">Aggiungi</button>
-        </form>
-
-    </div>
-</div>
+{% include 'App\\Admin\\Module\\Pages\\NewBlockDialog.twig' %}
 <!-- FINE CODICE DEFINIZIONE DIALOG NUOVO BLOCCO -->
 
 <!-- INIZIO CODICE DEFINIZIONE DIALOG PROPRIETA BLOCCO -->
-<div id="blockpropdialog" style="font-size: 0.9em;">
-    <form action="#" class="pure-form pure-form-aligned" id="bpd-form">
-        <fieldset>
-
-            <legend>Propriet&agrave; Blocco</legend>
-
-            <div class="pure-control-group">
-                <label>Nome</label>
-                <input type="text" id="bpd-blockname">
-            </div>
-
-            <div class="pure-control-group">
-                <label>Descrizione</label>
-                <textarea id="bpd-blockdescription"></textarea>
-            </div>
-
-            <div class="pure-control-group">
-                <label>Stile Blocco</label>
-                <select id="bpd-blockstyle">
-                    {% for style in styles %}
-                        <option value="{{ style.classname }}">{{ style.description }}</option>
-                    {% endfor %}
-                </select>
-            </div><br>
-
-            <legend>Sfondo Blocco</legend>
-
-            <div class="pure-control-group">
-                <label>URL Immagine</label>
-                <input type="text" id="bpd-txtbckurl">
-                <button type="button" class="pure-button openfileman">Sfoglia</button>
-            </div>
-
-            <div class="pure-control-group">
-                <label>Colore</label>
-                <input type="text" id="bpd-txtbckred" size="3" placeholder="Red">
-                <input type="text" id="bpd-txtbckgreen" size="3" placeholder="Green">
-                <input type="text" id="bpd-txtbckblue" size="3" placeholder="Blue">
-                <input type="text" id="bpd-txtbckopacity" size="3" placeholder="Opacity">
-            </div>
-
-            <div class="pure-control-group">
-                <label>Ripetizione Immagine</label>
-                <table class="pure-table pure-table-striped" style="display: inline-table;">
-                    <tr><td><input type="checkbox" id="bpd-chkbckrepeatx"></td><td>Orizzontale</td></tr>
-                    <tr><td><input type="checkbox" id="bpd-chkbckrepeaty"></td><td>Verticale </td></tr>
-                </table>
-            </div>
-
-            <div class="pure-control-group" style="clear: both;">
-                <label>Dimensioni</label>
-                <table class="pure-table pure-table-striped" style="display: inline-table;">
-                    <tr><td><input type="radio" id="bpd-bcksizecover" name="bpd-bcksize" value="cover"></td><td>Esteso 100%</td></tr>
-                    <tr><td><input type="radio" id="bpd-bcksizecontain" name="bpd-bcksize" value="contain"></td><td>Esteso in proporzione</td></tr>
-                    <tr><td><input type="radio" id="bpd-bcksizeinit" name="bpd-bcksize" value="" checked></td><td>Dimensioni reali</td></tr>
-                </table>
-            </div>
-        </fieldset>
-        <button type="button" class="pure-button pure-button-primary" id="bpd-btnsave" style="float: right;">Salva</button>
-    </form>
-</div>
+{% include 'App\\Admin\\Module\\Pages\\BlockPropertiesDialog.twig' %}
 <!-- FINE CODICE DEFINIZIONE DIALOG PROPRIETA BLOCCO -->
 
 
-<div id="roxyCustomPanel" style="display: none;">
+    <div id="newUrlDialog" style="display: none;">
+        <form>
+            <label>Nuovo Url</label>&nbsp;
+            <input type="text" id="nud-url" class="pure-form">
+        </form>
+    </div>
+
+    <div id="updateUrlDialog" style="display: none;">
+        <form>
+            <label>Url</label>&nbsp;&nbsp;<input type="text" id="uud-url">
+            <br><br>
+            <input type="checkbox" id="uud-refactor" checked>&nbsp;<label>Controllare se l'url &egrave; usato nei link&quest;</label>
+        </form>
+    </div>
+
+    <div id="urlRefactoringPreviewDialog" style="display: none; overflow: scroll;">
+        <form>
+        <table class="pure-table pure-table-striped" style="max-width: 95%; margin: auto;">
+            <thead>
+                <th></th>
+                <th>Nome Blocco</th>
+                <th>Url da sovrascrivere</th>
+                <th></th>
+            </thead>
+            <tbody>
+            {#<tr>#}
+                {#<td><input type="checkbox"></td>#}
+                {#<td>Blocco prova</td>#}
+                {#<td>/url-da-sostituire-di-prova</td>#}
+                {#<td><button class="pure-button show-link-content">Dettagli</button></td>#}
+            {#</tr>#}
+            {#<tr style="display: none;">#}
+                {#<td colspan="4">#}
+                {#<img src="/resources/uploads/capraia-1.jpg" alt="" width="19" height="19" />#}
+                {#</td>#}
+            {#</tr>#}
+            </tbody>
+        </table>
+        </form>
+    </div>
+
+
+
+<div id="fileManagerDialog" style="display: none;">
     <iframe src="" style="width:100%;height:100%" frameborder="0"></iframe>
 </div>
 
 <script type="text/javascript" src="/static/admin/js/form.actions.js"></script>
+<script type="text/javascript" src="/static/admin/js/urltable.controller.js"></script>
 <script src="/static/admin/js/menu.js"></script>
 {#{% if page.id > 0 %}#}
 <script type="text/javascript">
