--- a/static/admin/css/site.home.css
+++ b/static/admin/css/site.home.css
@@ -7,6 +7,16 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+.list-table {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 3em;
+    max-width: 90%;
+}
+.actions-col {
+    min-width: 80px;
+    text-align: center;
+}
 a:visited i {
 	color: rgb(25,24,24);
 }
