--- a/plugins/ContactMe/views/formFeedbackBlock.twig
+++ b/plugins/ContactMe/views/formFeedbackBlock.twig
@@ -1,2 +1,2 @@
 <h3>Messaggio inviato!</h3>
-<p>Ricever&agrave; una risposta il prima possibile. Grazie.</p>
+<p>Le risponderemo il prima possibile all'indirizzo email che ci ha fornito. Grazie.</p>
