--- a/apps/Site/views/Page.twig
+++ b/apps/Site/views/Page.twig
@@ -7,6 +7,7 @@
 
     <meta name="description" content="{{ pageDescription|escape }}">
     <link rel="stylesheet" type="text/css" href="/resources/css/stile.css">
+    <link rel="stylesheet" type="text/css" href="/resources/css/custom.css">
     <link rel="stylesheet" type="text/css" href="/static/pure-css/tables-min.css">
     <link rel="stylesheet" type="text/css" href="/static/lightbox/css/lightbox.css">
 
