--- a/resources/css/stile.css
+++ b/resources/css/stile.css
@@ -46,6 +46,10 @@ table td p, table td h1, table td h2, table td span {
 	padding-right: 5px;
 }
 
+#lang a {
+    text-decoration: none;
+}
+
 .languageflag {
 	border: none;
 	margin-right: 10px;
